fix autoscroll/overflow issue

--- a/view/ui.css
+++ b/view/ui.css
@@ -40,8 +40,6 @@ body {
     list-style-type: none;
     margin: 0;
     padding: 0;
-    height: 100%;
-    overflow-y: auto;
 }
 
 #wall > ul > li {
@@ -54,6 +52,7 @@ body {
     width: 100%;
     top: 50px;
     bottom: 50px;
+    overflow-y: auto;
 }
 
 #menubar, #input {
